# Kyra

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: Kyra.cpp
src/sys/: launcher.cpp  launcher.h  vmem.cpp  vmem.h
src/sys/loader/: ELF.cpp  ELF.h  ELFV2.cpp  ELFV2.h  SELF.cpp  SELF.h  common.h  dyload.cpp  dyload.h
src/tools/: cmd.cpp  cmd.h  log.cpp  log.h
